INTYG-3136: Skapade nytt direktiv wcIntygField för att inte använda wcField från utkast

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
@@ -1,6 +1,6 @@
 <div>
 
-  <div wc-field category-number="{{group.templateOptions.category}}" field-dynamic-label="KAT_{{group.templateOptions.category}}.RBK" ng-repeat="group in intygFields">
+  <div wc-intyg-field category-number="{{group.templateOptions.category}}" field-dynamic-label="KAT_{{group.templateOptions.category}}.RBK" ng-repeat="group in intygFields">
     <div ng-repeat="field in group.fieldGroup">
       <div wc-view-intyg-field category-number="group.templateOptions.category" field="field" next-field="group.fieldGroup[$index+1]" intyg-model="intygModel"></div>
       <div ng-repeat="subField in field.fieldGroup">
