INTYG-3030: Flikar visas nu korrekt oberoende av antal ifyllda diagnoser.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
@@ -7,9 +7,9 @@
       <div class="panel-wrapper-fmb" ng-show="status.open" ng-class="{'fmb-collapse': !status.open}">
         <div class="panel-arrow"></div>
         <div class="panel panel-fmb-info">
-          <uib-tabset active="active" class="fmb-panel-tabset nav-tabs__fmb">
+          <uib-tabset active="fmbStates.activeDiagnos" class="fmb-panel-tabset nav-tabs__fmb">
             <uib-tab index="$index + 1"
-                     ng-repeat="fmb in fmbStates"
+                     ng-repeat="fmb in fmbStates.diagnoses"
                      heading="{{fmb.diagnosKod}}"
                      disable="false"
                      select="selectDiagnos($index)">
@@ -29,7 +29,7 @@
                   <span id="fmb_diagnos_not_in_fmb_alert">För {{fmb.originalDiagnosKod}} finns inget FMB-stöd. Det FMB-stöd som visas nedan gäller den mindre specifika koden {{fmb.diagnosKod}} - {{fmb.diagnosBeskrivning}}.</span>
                 </div>
                 <div class="alert alert-warning" ng-if="!fmb.hasInfo">
-                  <span id="fmb_info_not_available"><span class="bold">Observera!</span> För {{fmb.diagnosKod}} {{fmb.diagnosBeskrivning}} finns inget FMB-stöd för detta fält.</span>
+                  <span id="fmb_info_not_available"><span class="bold">Observera!</span> För "{{fmb.diagnosKod}} {{fmb.diagnosBeskrivning}}" finns ingen FMB-information för detta fält.</span>
                 </div>
                 <div ng-repeat="item in fmb.formData[fieldName]" ng-show="item.text || item.list">
                   <h4 class="fmb-sub-headline" id="fmb_heading_{{item.heading}}">
