--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcIntygField.directive.html
@@ -5,8 +5,8 @@
       <span ng-if="fieldDynamicLabel" dynamic-label key="{{fieldDynamicLabel}}"></span>
     </h3>
   </div>
-	<span class="intyg-block__content" ng-class="{unfilled: filled == 'false', categorykmplt: fieldHasKomplettering}">
+  <span class="intyg-block__content" ng-class="{unfilled: filled == 'false', categorykmplt: categoryHasKomplettering}">
     <span class="intyg-field-blank" ng-hide="filled == 'true'"> <span message key="common.notset"></span></span>
-		<span ng-transclude ng-show="filled == 'true'"></span>
+    <span ng-transclude ng-show="filled == 'true'"></span>
   </span>
 </div>
