--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -1,5 +1,5 @@
 <div>
-	<label class="control-label inline-block checkbox-inline bold big-checkbox-label">
+	<label class="control-label inline-block checkbox-inline bold big-checkbox-label check-multi-text__label">
     <input type="checkbox" class="big-checkbox" ng-model="to.open">
     <span dynamic-label key="FRG_{{to.frgId}}.RBK"></span>
     <span wc-help-mark field-dynamic-help-text="FRG_{{to.frgId}}.HLP"></span>
