--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleDate.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleDate.formly.html
@@ -1,11 +1,5 @@
 <div class="form-inline">
-  <div>
-    <label class="form-control-label" ng-class="{'bold' : to.bold}">
-      <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
-      <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
-      {{to.required ? '*' : ''}}
-    </label>
-  </div>
+  <wc-form-label to="to"></wc-form-label>
   <div>
     <span wc-date-picker-field target-model="model[options.key]" add-date-parser="loose"></span>
   </div>
