INTYG-3208: Systemet stödjer nu varningsmeddelanden tillagda i vanliga valideringen. Renderas som gula alerts, är ej tvingande att fixa

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/validationGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/validationGroup.formly.html
@@ -1,4 +1,5 @@
 <wc-validation-group field-type="{{to.type}}"
+                     warnings="formState.viewState.common.warningMessagesByField[to.validationGroup.toLowerCase()]"
                      validations="formState.viewState.common.validationMessagesByField[to.validationGroup.toLowerCase()]">
   <formly-transclude></formly-transclude>
 </wc-validation-group>
