--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcValidationWrapper.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcValidationWrapper.directive.html
@@ -5,6 +5,7 @@
       key="{{key}}"
       komplettering-key="{{kompletteringKey}}"
       label-col-size="{{labelColSize}}"
+      warnings="warnings"
       validations="validations">
   </wc-field-validation>
   <wc-field-komplettering
