--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/validationWrapper.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/validationWrapper.formly.html
@@ -3,6 +3,7 @@
                        key="{{options.key}}"
                        komplettering-key="{{to.kompletteringKey}}"
                        hide-komplettering-text="{{to.hideKompletteringText}}"
+                       warnings="formState.viewState.common.warningMessagesByField[options.key.toLowerCase()]"
                        validations="formState.viewState.common.validationMessagesByField[options.key.toLowerCase()]">
   <formly-transclude></formly-transclude>
 </wc-validation-wrapper>
