--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcFieldValidation.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcFieldValidation.directive.html
@@ -11,10 +11,17 @@
       </div>
     </div>
 
+
     <div class="alert alert-danger validation" ng-if="!labelColSize" data-validation-section="{{getSection(validation)}}">
       <span ng-if="!validation.message" message key="common.validation.{{fieldType}}.{{validation.type}}"></span>
       <span ng-if="validation.message" combined-label="" dyn-key="{{validation.dynamicKey}}" stat-key="{{validation.message}}"></span>
     </div>
+  </div>
 
+  <div ng-repeat="warning in warnings">
+    <div class="alert alert-warning validation" ng-if="!labelColSize">
+      <span ng-if="!warning.message" message key="common.validation.{{fieldType}}.{{warning.type}}"></span>
+      <span ng-if="warning.message" combined-label="" dyn-key="{{warning.dynamicKey}}" stat-key="{{warning.message}}"></span>
+    </div>
   </div>
 </div>
