--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
@@ -1,4 +1,4 @@
-<div class="form-inline">
+<div class="form-horizontal">
   <div>
     <label class="inline-block" ng-class="{'bold' : to.bold}">
       <span dynamic-label key="{{to.label}}.RBK"></span>
@@ -8,7 +8,7 @@
   </div>
 
   <div data-ng-repeat="choice in to.choices">
-    <label class="checkbox" ng-class="{disabled:to.disabled[choice]}">
+    <label class="big-checkbox-label checkbox" ng-class="{disabled:to.disabled[choice]}">
       <input id="{{options.key}}-{{choice}}" type="checkbox" class="big-checkbox" ng-model="model[options.key][choice]" ng-disabled="to.disabled[choice]">
       <span dynamic-label key="{{to.code}}.{{choice}}.RBK"></span>
     </label>
