--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkboxInline.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkboxInline.formly.html
@@ -1,5 +1,5 @@
-<div class="form-inline">
-  <label class="checkbox checkbox-inline">
+<div>
+  <label class="big-checkbox-label checkbox">
     <input type="checkbox" class="big-checkbox" ng-model="model[options.key]">
     <span dynamic-label key="{{to.label}}.RBK"></span>
   </label>
