INTYG-3267: Förbättringar av FMB-rutorna efter feedback.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/fmb.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/fmb.formly.html
@@ -1,4 +1,3 @@
-<div class="form-inline" ng-class="to.panelClass">
-  <wc-fmb-help-display related-form-id="{{to.relatedFormId}}" fmb-states="fmbStates"
-                       field-name="{{to.fieldName}}"></wc-fmb-help-display>
+<div ng-class="to.panelClass">
+  <wc-fmb-help-display related-form-id="{{to.relatedFormId}}" field-name="{{to.fieldName}}"></wc-fmb-help-display>
 </div>
