--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
@@ -33,7 +33,8 @@
                type="text"
                class="form-control input-full"
                ng-class="{'fielderror' : hasValidationError('hamtasfran', $index)}"
-               ng-model="underlag.hamtasFran">
+               ng-model="underlag.hamtasFran"
+               maxlength="4000">
       </td>
     </tr>
   </table>
