--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wcField.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wcField.formly.html
@@ -1,5 +1,5 @@
 <div>
-  <a id="anchor.{{to.categoryName}}" name="anchor.{{to.categoryName}}"></a>
+  <a id="anchor-{{to.categoryName}}" name="anchor.{{to.categoryName}}"></a>
   <div wc-field
        field-dynamic-label="KAT_{{to.category}}.RBK"
        field-dynamic-help-text="KAT_{{to.category}}.HLP"
