INTYG-3244: Stjärnor på obligatoriska fält.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -1,6 +1,6 @@
 <div wc-date-period-manager model="model" class="sjukskrivningar">
   <h4 class="noH5After">
-    <span dynamic-label key="{{to.label}}.RBK"></span>
+    <span dynamic-label key="{{to.label}}.RBK"></span> *
   </h4>
 
   <div class="sjukskrivningar-section">
